--- a/photoAlbum/app/src/main/AndroidManifest.xml
+++ b/photoAlbum/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.PhotoAlbum"
         tools:targetApi="31">
         <activity
+            android:name=".img5Activity"
+            android:exported="false" />
+        <activity
+            android:name=".img4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".img3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".img2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".img1Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
